--- a/composer.json
+++ b/composer.json
@@ -1,47 +1,43 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "aabosham/filament-hijri-datetime-picker",
+    "description": "This is my package filament-hijri-datetime-picker",
     "keywords": [
-        ":vendor_name",
+        "AAbosham",
         "laravel",
-        ":package_slug"
+        "filament-hijri-datetime-picker"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/aabosham/filament-hijri-datetime-picker",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "AAbosham",
+            "email": "a.abosham@gmail.com",
             "role": "Developer"
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.1 || ^8.0",
         "spatie/laravel-package-tools": "^1.9.2",
         "illuminate/contracts": "^9.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.8",
         "nunomaduro/collision": "^6.0",
-        "nunomaduro/larastan": "^2.0.1",
         "orchestra/testbench": "^7.0",
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.1",
-        "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan-deprecation-rules": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
         "phpunit/phpunit": "^9.5",
         "spatie/laravel-ray": "^1.26"
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories"
+            "AAbosham\\FilamentHijriDatetimePicker\\": "src",
+            "AAbosham\\FilamentHijriDatetimePicker\\Database\\Factories\\": "database/factories"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "AAbosham\\FilamentHijriDatetimePicker\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -56,10 +52,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "AAbosham\\FilamentHijriDatetimePicker\\FilamentHijriDatetimePickerServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "FilamentHijriDatetimePicker": "AAbosham\\FilamentHijriDatetimePicker\\Facades\\FilamentHijriDatetimePicker"
             }
         }
     },
