--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "php": "^8.1 || ^8.0",
         "spatie/laravel-package-tools": "^1.9.2",
         "illuminate/contracts": "^9.0",
-        "filament/filament": "^2.0"
+        "filament/filament": "^2.0",
+        "khaled.alshamaa/ar-php": "^6.2"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.8",
